--- a/projector-server/package.json
+++ b/projector-server/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "db.js",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "body-parser": "1.15.2",
+    "express": "4.14.0",
     "fantasy-readers": "0.0.1",
-    "lodash": "^4.16.4",
-    "lowdb": "^0.13.1",
-    "ramda": "^0.22.1",
-    "uuid": "^2.0.3"
+    "lodash": "4.16.4",
+    "lowdb": "0.13.1",
+    "ramda": "0.22.1",
+    "uuid": "2.0.3"
   },
   "devDependencies": {},
   "scripts": {
